# qexplorer

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.c3d2f69  CMakeLists.txt.user.ce20128  README.md  archiver.cpp  archiver.h  main.cpp  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui  qexplorer
